<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.text.Html" />


        <variable
            name="controller"
            type="com.example.demo_app.ui.screen.auth.LoginScreen" />

        <variable
            name="viewModel"
            type="com.example.demo_app.ui.screen.auth.VMAuth" />



    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.auth.LoginScreen">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />





        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/title1_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            android:text="@string/Login"
            style="@style/tvMedium"
            android:textSize="24sp"/>


        <TextView
            android:id="@+id/title2_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title1_login"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            android:text="Please sign in to continue"
            android:layout_marginTop="4dp"
            style="@style/tvRegular"/>



        <FrameLayout
            android:id="@+id/container_login_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title2_login"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:helperText="@{viewModel.tilEmailHelper}"
            app:boxStrokeColor="@null"
            app:boxStrokeWidth="0.5dp"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            android:visibility="@{viewModel.isAuthTypeEmail()? View.VISIBLE : View.GONE}"
            app:helperTextTextColor="@color/design_default_color_error"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@+id/title2_login"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/tiEt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/phone_hint"
            app:hintEnabled="false"
            app:counterMaxLength="10"
            app:counterEnabled="true"
            app:helperText="@{viewModel.tilPhoneHelper}"
            android:visibility="@{viewModel.isAuthTypeEmail() ? View.GONE : View.VISIBLE}"
            app:helperTextTextColor="@color/design_default_color_error"
            app:endIconMode="clear_text"
            app:prefixText="+91"
            app:layout_constraintTop_toBottomOf="@+id/title2_login"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:text="@={viewModel.phone}"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterMaxLength="12"
            app:counterEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:helperText="@{viewModel.tilPasswordHelper}"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/black"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/container_login_phone"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiEt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:lines="1"
                android:text="@={viewModel.password}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            app:cornerRadius="12dp"
            app:rippleColor="@color/red"
            android:onClick="@{() -> controller.login()}"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_blue"
            app:strokeColor="@color/gray_dark"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <TextView
            android:id="@+id/tv_choose_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> controller.onChangeType()}"
            android:text="@{viewModel.isAuthTypeEmail()?Html.fromHtml(@string/or_continue_with_mobile):Html.fromHtml(@string/or_continue_with_email)}"
              app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            tools:text="@string/or_continue_with_mobile"/>




        <TextView
            android:id="@+id/tvLogin"
            style="@style/tvRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_register"
            android:textSize="13sp"
            android:textColorLink="@color/gray_dark"
           app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>